--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     </div><!--leftcol slutar-->
     <div class="rightcol">
       <p><img src="home.rat.jpg" height="200" width="400" alt="Brown rat" />
-   Facts, fun and science. 
+      </p>
+        
+         <p>Facts, fun and science.
       </p>
       <div class="push"></div>
     </div><!--rightcol slutar-->
