--- a/index.html
+++ b/index.html
@@ -30,9 +30,13 @@
     <div class="rightcol">
       <p><img src="home.rat.jpg" height="200" width="400" alt="Brown rat" />
       </p>
-        
-         <p>Facts, fun and science.
+         <div class="wrapper_2col">
+    <div class="leftcol">
+     <p>
+     Facts, science and fun. 
       </p>
+    </div><!--leftcol slutar-->
+    <div class="rightcol">
       <div class="push"></div>
     </div><!--rightcol slutar-->
     </div><!--wrapper2col slutar-->
