--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         
     </div><!--leftcol slutar-->
     <div class="rightcol">
-      <p><img src="home.rat.jpg" height="200" width="400" alt="Brown rat" />
-      </p>
+      <p><img src="home.rat.jpg" height="200" width="400" alt="Brown rat"/ class= center>
+      </p> 
          <div class="wrapper_2col">
     <div class="leftcol">
      <p>
