--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Amazing rats</title>
     <meta charset = "utf-8" />
     <link href = "navigation.css" rel="stylesheet" type="text/css" />
+        <link href = "index.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <!--wrapper börjar-->
