--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!--wrapper börjar-->
     <div class="wrapper">
     <header class="header">
-        <h1>Amazing rats</h1>
+       <center> <h1>Amazing rats</h1></center> 
     </header>
     <header class="mainmenu">
        <ul class="navbar">
