--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     </header>
     <div class="wrapper_2col">
     <div class="leftcol">
-     <center>  <p>
+     <center>  <p1>
      Welcome to our website about amazing rats!
-      </p> </center>
+      </p1> </center>
         
     </div><!--leftcol slutar-->
     <div class="rightcol">
@@ -32,9 +32,9 @@
       </p> 
          <div class="wrapper_2col">
     <div class="leftcol">
-    <center>   <p>
+    <center>   <p2>
      Facts, science and fun. 
-      </p>  </center> 
+      </p2>  </center> 
     </div><!--leftcol slutar-->
     <div class="rightcol">
       <div class="push"></div>
