--- a/habitat.html
+++ b/habitat.html
@@ -10,7 +10,7 @@
 <!--wrapper börjar-->
     <div class="wrapper">
     <header class="header">
-       <center> <h1>Amazing rats</h1></center> 
+      <h1>Habitat</h1>
     </header>
     <header class="mainmenu">
        <ul class="navbar">
@@ -21,10 +21,11 @@
     </header>
     <div class="wrapper_2col">
     <div class="leftcol">
-     <center>  <p1>
-     Welcome to our website about amazing rats!
-      </p1> </center>
-        
+      <p1>
+      Rats can inhabit almost every natural habitat, as long as there is a source of food and potential shelter, this can vary from isolated islands, to forest and warehouses. 
+     They construct nest, just above the ground level in a prefered habitat. Roof rats, on the other hand prefer nesting higher up in a habitat, such as in trees, cellars and roofs. 
+      </p1> 
+      
     </div><!--leftcol slutar-->
     <div class="rightcol">
       <p><img src="home.rat.jpg" height="200" width="200" alt="Brown rat"/ class= center>
