--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     </header>
     <div class="wrapper_2col">
     <div class="leftcol">
-     <center>  <p1>
+     <center>  <h2>
      Welcome to our website about amazing rats!
-      </p1> </center>
+      </h2> </center>
         
     </div><!--leftcol slutar-->
     <div class="rightcol">
