--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     
-    <body style = "background-color: thistle;">
+    <body style = "background-color: lavender;">
     <title>Amazing rats</title>
     <meta charset = "utf-8" />
     <link href = "navigation.css" rel="stylesheet" type="text/css" />
