--- a/habitat.html
+++ b/habitat.html
@@ -19,6 +19,11 @@
             <li><a href="facts.html">Facts</a></li>
         </ul>
     </header>
+        
+    <p><img src="home.rat.jpg" height="200" width="200" alt="Brown rat"/ class= left>
+     </p>
+        <p><img src="home.rat.jpg" height="200" width="200" alt="Brown rat"/ class= right>
+     </p>
     <div class="wrapper_2col">
     <div class="leftcol">
       <p1>
