--- a/habitat.html
+++ b/habitat.html
@@ -19,11 +19,14 @@
             <li><a href="facts.html">Facts</a></li>
         </ul>
     </header>
-        
-    <p><img src="home.rat.jpg" height="200" width="200" alt="Brown rat"/ class= left>
-     </p>
-        <p><img src="home.rat.jpg" height="200" width="200" alt="Brown rat"/ class= right>
-     </p>
+       <div class="row">
+  <div class="column">
+   <img src="home.rat.jpg" height="200" width="200" alt="Brown rat"/style="width:100%">  
+  </div>
+  <div class="column">
+  <img src="home.rat.jpg" height="200" width="200" alt="Brown rat"/style="width:100%">  
+  </div>
+</div>
     <div class="wrapper_2col">
     <div class="leftcol">
       <p1>
