--- a/habitat.html
+++ b/habitat.html
@@ -19,13 +19,13 @@
             <li><a href="facts.html">Facts</a></li>
         </ul>
     </header>
-       <div class="row">
-  <div class="column">
-   <img src="home.rat.jpg" height="200" width="200" alt="Brown rat"/style="width:30%">  
+      <div class="flex-container">
+  <div class="flex-rat one ">
+ A city rat in its habitat, near the ground. 
   </div>
-  <div class="column">
-  <img src="home.rat.jpg" height="200" width="200" alt="Brown rat"/style="width:30%">  
+  <div class="flex-rat two">
   </div>
+  A rat, that prefers mullbery trees. 
 </div>
     <div class="wrapper_2col">
     <div class="leftcol">
