--- a/habitat.html
+++ b/habitat.html
@@ -21,11 +21,17 @@
     </header>
       <div class="flex-container">
   <div class="flex-rat one ">
+       <p><img src="home.rat.jpg" height="200" width="200" alt="Brown rat"/>
+      </p> 
  A city rat in its habitat, near the ground. 
   </div>
   <div class="flex-rat two">
+       <p><img src="home.rat.jpg" height="200" width="200" alt="Brown rat"/ class= center>
+      </p> 
+      
+  A rat, that prefers mullberry trees.
   </div>
-  A rat, that prefers mullbery trees. 
+
 </div>
     <div class="wrapper_2col">
     <div class="leftcol">
