--- a/habitat.html
+++ b/habitat.html
@@ -21,12 +21,12 @@
     </header>
       <div class="flex-container">
   <div class="flex-rat one ">
-       <p><img src="city.rat.jpg" height="200" width="200" alt="Brown rat"/>
+       <p><img src="city.rat.jpeg" height="200" width="200" alt="Rat on the ground"/ class= center>
       </p> 
  A city rat in its habitat, near the ground. 
   </div>
   <div class="flex-rat two">
-       <p><img src="mullberry.rat.jpg" height="200" width="200" alt="Brown rat"/ class= center>
+       <p><img src="mullberry.rat.jpg" height="200" width="200" alt="Rat on a mullberry tree"/ class= center>
       </p>  
   </div>
   A rat, that prefers mullberry trees.
