--- a/habitat.html
+++ b/habitat.html
@@ -23,7 +23,7 @@
   <div class="flex-rat one ">
        <p><img src="city.rat.jpeg" height="200" width="400" alt="Rat on the ground"/ class= center>
       </p> 
- A city rat in its habitat, near the ground. 
+<center> A city rat in its habitat, near the ground. </center>
   </div>
   <div class="flex-rat two">
        <p><img src="mullberry.rat.jpg" height="200" width="400" alt="Rat on a mullberry tree"/ class= center>
