--- a/habitat.html
+++ b/habitat.html
@@ -34,9 +34,9 @@
     <div class="wrapper_2col">
     <div class="leftcol">
       <p1>
-      Rats can inhabit almost every natural habitat, as long as there is a source of food and potential shelter,this can vary from isolated islands, to forest and warehouses. 
+   <center>  Rats can inhabit almost every natural habitat, as long as there is a source of food and potential shelter,this can vary from isolated islands, to forest and warehouses. 
      They construct nest, just above the ground level in a prefered habitat. Roof rats, on the other hand prefer nesting higher up in a habitat, such as in trees, cellars and roofs. 
-      </p1> 
+     </center>   </p1> 
       
     </div><!--leftcol slutar-->
     <div class="rightcol">
