--- a/habitat.html
+++ b/habitat.html
@@ -28,7 +28,7 @@
   <div class="flex-rat two">
        <p><img src="mullberry.rat.jpg" height="200" width="400" alt="Rat on a mullberry tree"/ class= center>
       </p>  
-        A rat, that prefers mullberry trees.
+     <center> A rat, that prefers mullberry trees.</center> 
   </div>
 </div>
     <div class="wrapper_2col">
