--- a/species.html
+++ b/species.html
@@ -1,1 +1,39 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <body style = "background-color: lavender;">
+    <title>Amazing rats</title>
+    <meta charset = "utf-8" />
+    <link href = "navigation.css" rel="stylesheet" type="text/css" />
+        <link href = "species.css" rel="stylesheet" type="text/css" />
+</head>
+<body>
+<!--wrapper börjar-->
+    <div class="wrapper">
+    <header class="header">
+      <h1>Habitat</h1>
+    </header>
+    <header class="mainmenu">
+       <ul class="navbar">
+             <li><a href="index.html">Home</a></li>
+            <li><a href="habitat.html">Habitat</a></li>
+            <li><a href="species.html">Species</a></li>
+            <li><a href="facts.html">Facts</a></li>
+        </ul>
+    </header>
+    <div class="rightcol">
+      <p>
+      </p> 
+         <div class="wrapper_2col">
+    <div class="leftcol">
+    </div><!--leftcol slutar-->
+    <div class="rightcol">
+      <div class="push"></div>
+    </div><!--rightcol slutar-->
+    </div><!--wrapper2col slutar-->
+    <footer class="footer">
+      <p>All rights reserved - &#169; Copyright</p>
+    </footer>
+    </div><!--wrapper slutar-->
+  </body>
+</html>
