--- a/species.html
+++ b/species.html
@@ -11,7 +11,7 @@
 <!--wrapper börjar-->
     <div class="wrapper">
     <header class="header">
-      <h1>Habitat</h1>
+      <h1>Species</h1>
     </header>
     <header class="mainmenu">
        <ul class="navbar">
@@ -21,6 +21,25 @@
             <li><a href="facts.html">Facts</a></li>
         </ul>
     </header>
+             <div class="flex-container">
+  <div class="flex-rat one ">
+       <p><img src="city.rat.jpeg" height="200" width="400" alt="Rat on the ground"/ class= center>
+      </p> 
+<center> Wood rat  </center>
+  </div>
+  <div class="flex-rat two">
+       <p><img src="mullberry.rat.jpg" height="200" width="400" alt="Rat on a mullberry tree"/ class= center>
+      </p>  
+      <li>  <a href="specieone.html">Black rat</a> </li>
+     <center> Black rat.</center> 
+  </div>
+</div>
+    <div class="wrapper_2col">
+    <div class="leftcol">
+      <p1>
+   </p1> 
+      
+    </div><!--leftcol slutar-->
     <div class="rightcol">
       <p>
       </p> 
