--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
       </p> 
          <div class="wrapper_2col">
     <div class="leftcol">
-    <center> <p2>
+    <center> <h4>
      Facts, science and fun. 
-      </p2>  </center> 
+      </h4>  </center> 
     </div><!--leftcol slutar-->
     <div class="rightcol">
       <div class="push"></div>
