--- a/species.html
+++ b/species.html
@@ -25,12 +25,12 @@
   <div class="flex-rat one ">
        <p><img src="city.rat.jpeg" height="200" width="400" alt="Rat on the ground"/ class= center>
       </p> 
-<center> Wood rat  </center>
+       <li> <a href="specieone.html">Black rat</a></li>
   </div>
   <div class="flex-rat two">
        <p><img src="mullberry.rat.jpg" height="200" width="400" alt="Rat on a mullberry tree"/ class= center>
       </p>  
-      <li> <a href="specieone.html">Black rat</a></li>
+        <li> <a href="specietwo.html">Wood rat</a></li>
   </div>
 </div>
     <div class="wrapper_2col">
