--- a/species.html
+++ b/species.html
@@ -21,6 +21,13 @@
             <li><a href="facts.html">Facts</a></li>
         </ul>
     </header>
+          <div class="rightcol">
+      <p>
+          Learn more about Black and Wood rats, by following the links!
+      </p> 
+         <div class="wrapper_2col">
+    <div class="leftcol">
+    </div><!--lef
              <div class="flex-container">
   <div class="flex-rat one ">
        <p><img src="city.rat.jpeg" height="200" width="400" alt="Rat on the ground"/ class= center>
@@ -39,12 +46,7 @@
    </p1> 
       
     </div><!--leftcol slutar-->
-    <div class="rightcol">
-      <p>
-      </p> 
-         <div class="wrapper_2col">
-    <div class="leftcol">
-    </div><!--leftcol slutar-->
+  tcol slutar-->
     <div class="rightcol">
       <div class="push"></div>
     </div><!--rightcol slutar-->
