--- a/species.html
+++ b/species.html
@@ -27,7 +27,7 @@
       </p> 
          <div class="wrapper_2col">
     <div class="leftcol">
-    </div><!--lef
+    </div>
              <div class="flex-container">
   <div class="flex-rat one ">
        <p><img src="city.rat.jpeg" height="200" width="400" alt="Rat on the ground"/ class= center>
@@ -45,8 +45,7 @@
       <p1>
    </p1> 
       
-    </div><!--leftcol slutar-->
-  tcol slutar-->
+    </div>
     <div class="rightcol">
       <div class="push"></div>
     </div><!--rightcol slutar-->
