--- a/specieone.html
+++ b/specieone.html
@@ -5,13 +5,14 @@
     <title>Amazing rats</title>
     <meta charset = "utf-8" />
     <link href = "navigation.css" rel="stylesheet" type="text/css" />
-        <link href = "species.css" rel="stylesheet" type="text/css" />
+        <link href = "specieone.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <!--wrapper börjar-->
     <div class="wrapper">
     <header class="header">
-      <h1>Species</h1>
+      <h1>Black rat 
+        Rattus Rattus</h1>
     </header>
     <header class="mainmenu">
        <ul class="navbar">
@@ -21,19 +22,7 @@
             <li><a href="facts.html">Facts</a></li>
         </ul>
     </header>
-             <div class="flex-container">
-  <div class="flex-rat one ">
-       <p><img src="city.rat.jpeg" height="200" width="400" alt="Rat on the ground"/ class= center>
-      </p> 
-<center> Wood rat  </center>
-  </div>
-  <div class="flex-rat two">
-       <p><img src="mullberry.rat.jpg" height="200" width="400" alt="Rat on a mullberry tree"/ class= center>
-      </p>  
-      <a href="https://www.w3schools.com/">Visit W3Schools.com!</a>
-     <center> Black rat.</center> 
-  </div>
-</div>
+            
     <div class="wrapper_2col">
     <div class="leftcol">
       <p1>
