--- a/specieone.html
+++ b/specieone.html
@@ -22,8 +22,8 @@
         </ul>
     </header>
             
-    <div class="wrapper_2col">
-    <div class="leftcol">
+    <div class="wrapper_column">
+    <div class="column">
        
       <p1>
      Black rats (Rattus rattus) are common worldwide, black rats are 5.0-7.2 in (12.7-18.3 cm) long. These rats are likely traces back to areas close to Malasya, where the speciation occured when they came to India. 
