--- a/specieone.html
+++ b/specieone.html
@@ -23,14 +23,17 @@
     </header>
             
 <div class=pull-left>
-
     <p1>
      Black rats (Rattus rattus) are common worldwide, black rats are 5.0-7.2 in (12.7-18.3 cm) long. These rats are likely traces back to areas close to Malasya, where the speciation occured when they came to India. 
     Once  the rats reached Europw, they were carried throughout the world during the colonial times. 
     These rats can be found in many different habitats, both natural and human-developed areas around the world, particularly in warmer climates.
    </p1>   
 </div>  
-    <div class="rightcol">
+    
+        <div class=pull-right>
+  <p><img src="city.rat.jpeg" height="200" width="400" alt="Rat on the ground"/ class= center>
+      </p> 
+</div>  
       <p>
       </p> 
          <div class="wrapper_2col">
