--- a/specietwo.html
+++ b/specietwo.html
@@ -11,7 +11,7 @@
 <!--wrapper börjar-->
     <div class="wrapper">
     <header class="header">
-      <h1>Black rat </h1>
+      <h1>Wood rat </h1>
     </header>
     <header class="mainmenu">
        <ul class="navbar">
@@ -24,14 +24,14 @@
             
 <div class=column>
     <p1>
-     Wood rats (Rattus rattus) are common worldwide, black rats are 5.0-7.2 in (12.7-18.3 cm) long. 
-    These rats are likely traces back to areas close to Malasya, where the speciation occured when they came to India. 
-    Once  the rats reached Europe, they were carried throughout the world during the colonial times. 
-   These rats can be found in many different habitats, both natural and human-developed areas around the world, particularly in warmer climates.
+     Wood rats, also known as packrats can be any rat in the species of the rodent genus Neotoma. These rats have a common rat appearance, but tend to be noticeably larger than other deer and cotton mice.
+    The greatest diversity of rats exists in the  deserts of the western United States and northern Mexico. Wood rats can live anywhere from low, hot deserts to cold and rocky habitats. 
+    These rats, as many others are nest builders and are particullary drawn to hiny objects. 
+       
    </p1>   
 </div>  
         <div class=column>
-  <p><img src="city.rat.jpeg" height="200" width="400" alt="Rat on the ground"/ class= center>
+  <p><img src="wood.rat.jpg" height="200" width="400" alt="Rat on a tree"/ class= center>
       </p> 
 </div>  
       <p>
