--- a/specietwo.html
+++ b/specietwo.html
@@ -26,7 +26,7 @@
     <p1>
      Wood rats, also known as packrats can be any rat in the species of the rodent genus Neotoma. These rats have a common rat appearance, but tend to be noticeably larger than other deer and cotton mice.
     The greatest diversity of rats exists in the  deserts of the western United States and northern Mexico. Wood rats can live anywhere from low, hot deserts to cold and rocky habitats. 
-    These rats, as many others are nest builders and are particullary drawn to hiny objects. 
+    These rats, as many others are nest builders and are particullary drawn to shiny objects. 
        
    </p1>   
 </div>  
