--- a/facts.html
+++ b/facts.html
@@ -1,1 +1,85 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Exempel 1 navigation bar</title>
+    <meta charset = "utf-8" />
+    <link href="facts.css" rel="stylesheet" type="text/css" />
+    <link href = "navigation.css" rel="stylesheet" type="text/css" />
+    <link href="slider.css" rel="stylesheet" type="text/css" />
+</head>
+<body>
+<!--wrapper börjar-->
+    <div class="wrapper">
+    <header class="header">
+        <h1>Facts</h1>
+    </header>
+    <header class="mainmenu">
+       <ul class="navbar">
+            <li><a href="home.html">Hem</a></li>
+            <li><a href="news.html">Nyheter</a></li>
+            <li><a href="contacts.html">kontakt</a></li>
+            <li><a href="about.html">Om</a></li>
+        </ul>
+    </header>
+    <div class="wrapper_2col">
+    <div class="leftcol">
+      <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur id erat
+      et elit blandit lobortis a a neque. Fusce lacus nisi, vulputate quis vulputate
+      vel, aliquam vitae libero. Sed congue ligula quis turpis tincidunt ut
+      ultrices ante feugiat. Sed semper tortor fermentum ligula fringilla tristique.
+      Mauris lacinia venenatis commodo. Curabitur scelerisque pharetra facilisis.
+      Donec et iaculis nunc. Curabitur rhoncus iaculis diam, rutrum faucibus
+      magna cursus in. Vestibulum eu consectetur magna.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a augue id
+        leo scelerisque hendrerit non non dui. Integer condimentum quam sed tellus
+        ultricies a aliquam elit ornare. Curabitur ac libero et sapien feugiat
+        porta vitae sed lorem. In faucibus imperdiet neque, sit amet accumsan
+        ante elementum tincidunt. Proin tincidunt massa at leo tincidunt consectetur.
+        Sed consectetur ornare libero a sagittis. Pellentesque aliquet ipsum ante.
+        Sed eget tellus dui, eget sodales lectus.
+      </p>
+    </div><!--leftcol slutar-->
+    <div class="rightcol">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur id erat
+        et elit blandit lobortis a a neque. Fusce lacus nisi, vulputate quis vulputate
+        vel, aliquam vitae libero. Sed congue ligula quis turpis tincidunt ut
+        ultrices ante feugiat. Sed semper tortor fermentum ligula fringilla tristique.
+        Mauris lacinia venenatis commodo. Curabitur scelerisque pharetra facilisis.
+        Donec et iaculis nunc. Curabitur rhoncus iaculis diam, rutrum faucibus
+        magna cursus in. Vestibulum eu consectetur magna.
+      </p>
+      <p><img src="img/andreas.jpg" height="300" width="201" alt="Foto" />
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a augue id
+        leo scelerisque hendrerit non non dui. Integer condimentum quam sed tellus
+        ultricies a aliquam elit ornare. Curabitur ac libero et sapien feugiat
+        porta vitae sed lorem. In faucibus imperdiet neque, sit amet accumsan
+        ante elementum tincidunt. Proin tincidunt massa at leo tincidunt consectetur.
+        Sed consectetur ornare libero a sagittis. Pellentesque aliquet ipsum ante.
+        Sed eget tellus dui, eget sodales lectus.
+      </p>
+      <div class="push"></div>
+    </div><!--rightcol slutar-->
+    </div><!--wrapper2col slutar-->
+        <div class="div-content">
+<img class="mySlides" src="img1.jpg"alt="Racoon in the woods" style="width:100%">
+<img class="mySlides" src="img2.jpg" alt="Racoon in the bushes" style="width:100%">
+<img class="mySlides" src="img3.jpg" alt="Racoon sleeping" style="width:100%">
+<img class="mySlides" src="img4.jpg" alt="Close up racoon"  style="width:100%">
+<img class="mySlides" src="img5.jpg"alt="Racoon on a bench" style="width:100%">
+<button class="slider-button display-left" onclick="changeImage(-1)">&#8610;</button>
+<button class="slider-button display-right" onclick="changeImage(1)">&#8611;</button>
+</div>
+
+    <footer class="footer">
+      <p>All rights reserved - &#169; Copyright</p>
+    </footer>
+    </div><!--wrapper slutar-->
+    <script src="image-slider.js"></script>
+  </body>
+</html>
+© 2021 GitHub, Inc.
 
