--- a/facts.html
+++ b/facts.html
@@ -58,6 +58,7 @@
 <button class="slider-button display-right" onclick="changeImage(1)">&#8696;</button>
 </div>
 
+	    <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
     <footer class="footer">
       <p>All rights reserved - &#169; Copyright</p>
     </footer>
