--- a/facts.html
+++ b/facts.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<body style = "background-color: lavender;">
     <title>Amazing rats</title>
     <meta charset = "utf-8" />
     <link href="facts.css" rel="stylesheet" type="text/css" />
