--- a/facts.html
+++ b/facts.html
@@ -51,11 +51,9 @@
     </div><!--rightcol slutar-->
     </div><!--wrapper2col slutar-->
         <div class="div-content">
-<img class="mySlides" src="img1.jpg"alt="Racoon in the woods" style="width:50%">
-<img class="mySlides" src="img2.jpg" alt="Racoon in the bushes" style="width:50%">
-<img class="mySlides" src="img3.jpg" alt="Racoon sleeping" style="width:50%">
-<img class="mySlides" src="img4.jpg" alt="Close up racoon"  style="width:50%">
-<img class="mySlides" src="img5.jpg"alt="Racoon on a bench" style="width:50%">
+<img class="mySlides" src="rat1.jpg"alt="Racoon in the woods" style="width:50%">
+<img class="mySlides" src="rat2.jpg" alt="Racoon in the bushes" style="width:50%">
+<img class="mySlides" src="rat3.jpg" alt="Racoon sleeping" style="width:50%">
 <button class="slider-button display-left" onclick="changeImage(-1)">&#8695;</button>
 <button class="slider-button display-right" onclick="changeImage(1)">&#8696;</button>
 </div>
