--- a/facts.html
+++ b/facts.html
@@ -51,9 +51,9 @@
     </div><!--rightcol slutar-->
     </div><!--wrapper2col slutar-->
         <div class="div-content">
-<img class="mySlides" src="rat1.jpg"alt="Racoon in the woods" style="width:50%">
-<img class="mySlides" src="rat2.jpg" alt="Racoon in the bushes" style="width:50%">
-<img class="mySlides" src="rat3.jpg" alt="Racoon sleeping" style="width:50%">
+<img class="mySlides" src="rat1.jpg"alt="Brown rat on the ground covered in leaves" style="width:50%">
+<img class="mySlides" src="rat2.jpg" alt="White rat on a blanket" style="width:50%">
+<img class="mySlides" src="rat3.jpg" alt="Close up of a brown rat with stripes" style="width:50%">
 <button class="slider-button display-left" onclick="changeImage(-1)">&#8695;</button>
 <button class="slider-button display-right" onclick="changeImage(1)">&#8696;</button>
 </div>
