--- a/habitat.html
+++ b/habitat.html
@@ -25,12 +25,12 @@
   <div class="flex-rat one ">
        <p><img src="city.rat.jpeg" height="200" width="400" alt="Rat on the ground"/ class= center>
       </p> 
-<center> A city rat in its habitat, near the ground. </center>
+<center> <p4>A city rat in its habitat, near the ground. </p4></center>
   </div>
   <div class="flex-rat two">
        <p><img src="mullberry.rat.jpg" height="200" width="400" alt="Rat on a mullberry tree"/ class= center>
       </p>  
-     <center> A rat, that prefers mullberry trees.</center> 
+     <center><p5> A rat, that prefers mullberry trees.</p5></center> 
   </div>
 </div>
     <div class="wrapper_2col">
