--- a/specietwo.html
+++ b/specietwo.html
@@ -30,8 +30,8 @@
     </p1> </center>   
 </div>  
         <div class=column>
-  <p><img src="wood.rat.jpg" height="200" width="200" alt="Rat on a tree"/ class = center>
-      </p> 
+  <center>   <p><img src="wood.rat.jpg" height="200" width="200" alt="Rat on a tree"/>
+      </p> </center>   
 </div>  
       <p>
       </p> 
