--- a/specietwo.html
+++ b/specietwo.html
@@ -8,6 +8,9 @@
         <link href = "specietwo.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
+    <p id = "p1">Green</p>
+    <p id = "p2">Normal Green</p>
+    <p id = "p3">Dark Green</p>
 <!--wrapper börjar-->
     <div class="wrapper">
     <header class="header">
