--- a/facts.html
+++ b/facts.html
@@ -29,10 +29,10 @@
   <div class="flex-rat one ">
      
 	       	    <ul class="list-image">
-	        <li> Rats can swim over a mile, some species can be in water for three days and hold their breath for  three minutes. </li>
-	        <li> Rats use their tail to keep them cool in the same way we humans sweat,
+	        <li> <b> Rats  </b> can swim over a mile, some species can be in water for three days and hold their breath for  three minutes. </li>
+	        <li>  <b> Rats </b> use their tail to keep them cool in the same way we humans sweat,
       they control their body temperature by expanding and contracting the blood vessels in their tails.  </li>
-	        <li>  Rats can experience what scientists call "social - joy" while playing with humans and they can laugh, their laugh is a high- pitched noise. </li>
+	        <li>   <b> Rats </b> can experience what scientists call "social - joy" while playing with humans and they can laugh, their laugh is a high- pitched noise. </li>
 	</ul>
   
   </div>
