--- a/habitat.html
+++ b/habitat.html
@@ -23,7 +23,7 @@
     </header>
       <div class="flex-container">
   <div class="flex-rat one ">
-       <p><img src="city.rat.jpeg" height="200" width="400" alt="Rat on the ground"/ class= center>
+       <p><img src="blackratop.jpg" height="200" width="400" alt="Rat on the ground"/ class= center>
       </p> 
 <center> <p4>A city rat in its habitat, near the ground. </p4></center>
   </div>
