--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <body style = "background-color: lavender;">
    
     <meta charset = "utf-8" />
-    <link href = "navigation.css" rel="stylesheet" type="text/css" />
+    <link href = "cssfiles/navigation.css" rel="stylesheet" type="text/css" />
         <link href = "index.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
