--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    
     <meta charset = "utf-8" />
     <link href = "cssfiles/navigation.css" rel="stylesheet" type="text/css" />
-        <link href = "index.css" rel="stylesheet" type="text/css" />
+        <link href = "cssfiles/index.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
      <title>Amazing rats</title>
