--- a/htmlfiles/facts.html
+++ b/htmlfiles/facts.html
@@ -4,9 +4,9 @@
 	<body style = "background-color: lavender;">
     <title>Amazing rats</title>
     <meta charset = "utf-8" />
-    <link href="facts.css" rel="stylesheet" type="text/css" />
-    <link href = "navigation.css" rel="stylesheet" type="text/css" />
-    <link href="slider.css" rel="stylesheet" type="text/css" />
+    <link href="cssfiles/facts.css" rel="stylesheet" type="text/css" />
+    <link href = "cssfiles/navigation.css" rel="stylesheet" type="text/css" />
+    <link href="cssfiles/slider.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <!--wrapper börjar-->
