--- a/specietwo.html
+++ b/specietwo.html
@@ -4,8 +4,8 @@
     <body style = "background-color: lavender;">
     <title>Amazing rats</title>
     <meta charset = "utf-8" />
-    <link href = "navigation.css" rel="stylesheet" type="text/css" />
-        <link href = "specietwo.css" rel="stylesheet" type="text/css" />
+    <link href = "cssfiles/navigation.css" rel="stylesheet" type="text/css" />
+        <link href = "cssfiles/specietwo.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 
