--- a/facts.html
+++ b/facts.html
@@ -38,9 +38,9 @@
   </div>
   <div class="flex-rat two">
 	  <div class="div-content">
-<img class="mySlides" src="rat2.jpg" alt="White rat on a blanket" style="width:100%">
-<img class="mySlides" src="rat1.jpg"alt="Brown rat on the ground covered in leaves" style="width:100%">
-<img class="mySlides" src="rat3.jpg" alt="Close up of a brown rat with stripes" style="width:100%">
+<img class="mySlides" src="pictures/rat2.jpg" alt="White rat on a blanket" style="width:100%">
+<img class="mySlides" src="pictures/rat1.jpg"alt="Brown rat on the ground covered in leaves" style="width:100%">
+<img class="mySlides" src="pictures/rat3.jpg" alt="Close up of a brown rat with stripes" style="width:100%">
 <button class="slider-button display-left" onclick="changeImage(-1)">&#8695;</button>
 <button class="slider-button display-right" onclick="changeImage(1)">&#8696;</button>
 </div>
