--- a/habitat.html
+++ b/habitat.html
@@ -23,12 +23,12 @@
     </header>
       <div class="flex-container">
   <div class="flex-rat one ">
-       <p><img src="blackratop.jpg" height="200" width="400" alt="Rat on the ground"/ class= center>
+       <p><img src="pictures/blackratop.jpg" height="200" width="400" alt="Rat on the ground"/ class= center>
       </p> 
 <center> <p4>A city rat in its habitat, near the ground. </p4></center>
   </div>
   <div class="flex-rat two">
-       <p><img src="mullberry.rat.jpg" height="200" width="400" alt="Rat on a mullberry tree"/ class= center>
+       <p><img src="pictures/mullberry.rat.jpg" height="200" width="400" alt="Rat on a mullberry tree"/ class= center>
       </p>  
      <center><p5> A rat, that prefers mullberry trees.</p5></center> 
   </div>
