--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         
     </div><!--leftcol slutar-->
     <div class="rightcol">
-      <p><img src="homeratop.jpg" height="200" width="200" alt="Brown rat"/ class= center>
+      <p><img src="pictures/homeratop.jpg" height="200" width="200" alt="Brown rat"/ class= center>
       </p> 
          <div class="wrapper_2col">
     <div class="leftcol">
