--- a/specieone.html
+++ b/specieone.html
@@ -33,7 +33,7 @@
   </div>
   <div class="flex-rat two">
        <p>
-           <img src="blackratop.jpg" height="200" width="400" alt="Rat on the ground"/ class= center>
+           <img src="pictures/blackratop.jpg" height="200" width="400" alt="Rat on the ground"/ class= center>
       </p>  
  
   </div>
