--- a/species.html
+++ b/species.html
@@ -30,12 +30,12 @@
     </div>
              <div class="flex-container">
   <div class="flex-rat one ">
-       <p><img src="blackrat.jpg" height="200" width="400" alt="Rat in the grass"/ class= center>
+       <p><img src="pictures/blackrat.jpg" height="200" width="400" alt="Rat in the grass"/ class= center>
       </p> 
        <li> <a href="specieone.html">Black rat</a></li>
   </div>
   <div class="flex-rat two">
-       <p><img src="woodrat.jpg" height="200" width="400" alt="Rat between two flowers"/ class= center>
+       <p><img src="pictures/woodrat.jpg" height="200" width="400" alt="Rat between two flowers"/ class= center>
       </p>  
         <li> <a href="specietwo.html">Wood rat</a></li>
   </div>
