--- a/species.html
+++ b/species.html
@@ -30,7 +30,7 @@
     </div>
              <div class="flex-container">
   <div class="flex-rat one ">
-       <p><img src="pictures/blackrat.jpg" height="200" width="400" alt="Rat in the grass"/ class= center>
+       <p><img src="pictures/blackratop.jpg" height="200" width="400" alt="Rat in the grass"/ class= center>
       </p> 
        <li> <a href="specieone.html">Black rat</a></li>
   </div>
