--- a/facts.html
+++ b/facts.html
@@ -65,7 +65,7 @@
       <p>All rights reserved - &#169; Copyright</p>
     </footer>
     </div><!--wrapper slutar-->
-    <script src="image-slider.js"></script>
+    <script src="javascript/image-slider.js"></script>
   </body>
 </html>
 © 2021 GitHub, Inc.
