--- a/specietwo.html
+++ b/specietwo.html
@@ -32,7 +32,7 @@
     </p1> </center>   
 </div>  
         <div class=column>
-  <center>   <p><img src="pictures/wood.rat.jpg" height="200" width="200" alt="Rat on a tree"/>
+  <center>   <p><img src="pictures/woodratoptim.jfif" height="200" width="200" alt="Rat on a tree"/>
       </p> </center>   
 </div>  
       <p>
